# rust-study-demo

./: README.md
async-and-await/: Cargo.toml
async-and-await/examples/: async-io.rs  async-std-block-on.rs  async-std-io.rs  async-std-spawn-blocking.rs  async-test1.rs  async-test2.rs  block-async-task.rs  pow.rs  self-ref-pin.rs  self-ref.rs  sync-io.rs  tcp-listener.rs  thread-io.rs  tokio-mutex.rs
basic/src/: chat-data-structure.rs  error-handle.rs  fib.rs  return-value.rs  square-and-cube.rs
borrowing-test/: Cargo.toml
borrowing-test/src/: main.rs
derivemacros/: Cargo.toml
derivemacros/examples/: command.rs
derivemacros/src/: lib.rs  raw_builder.rs
derivemacros/templates/: builder.j2
docs/: 10 Rc和Arc实现多个所有者.md  11 Rust的错误处理.md  12 Rust学习笔记-智能指针.md  13 Rust学习笔记-Unsafe Rust.md  14 Rust学习笔记-宏编程.md  15 Rust学习笔记-并发基础.md  16 Rust学习笔记-异步编程(async:await:Future).md  2 Rust的引用.md  3 Rust学习笔记-数据类型基础.md  4 Rust学习笔记-结构体.md  5 Rust学习笔记-多态、泛型和特型（trait）.md  6 Rust学习笔记-泛型使用场景.md  7 Rust学习笔记-实用工具特型（trait）.md  8 Rust学习笔记-闭包.md  9 生命周期.md  Rc和Arc实现多个所有者.md  Rc和Arc智能指针.md  Rust学习笔记-Unsafe Rust.md  Rust学习笔记-一些基本的trait.md  Rust学习笔记-宏编程.md  Rust学习笔记-异步处理(async:await:Future).md  Rust学习笔记-智能指针.md  Rust学习笔记-泛型使用场景.md  Rust学习笔记-类型系统、泛型和trait.md  Rust学习笔记-闭包.md  Rust的引用.md  Rust的所有权和借用.md  Rust的错误处理.md  rust的借用和引用.md  rust的所有权、借用、引用.md  泛型使用场景.md  生命周期.md  类型系统、泛型和trait.md
docs/flow-chart/: Box.drawio  Rc-dag.drawio  Rc.drawio  RefCell.drawio  box所有权移动.drawio  clone.drawio  引用的堆栈地址.drawio  所有权-借用-引用.drawio  所有权list例子.drawio  所有权转移.drawio  未命名 (3).drawio  生命周期.drawio
docs/流程图/: rust的类型.drawio  结构体内存  闭包捕获自由变量.drawio
hello-world/src/: main.rs
http-cli/: Cargo.toml  README.md
http-cli/src/: main.rs
json-macro/: Cargo.toml
json-macro/src/: lib.rs  macros.rs
macrostest/: Cargo.toml
macrostest/examples/: manual-command.rs  query.rs  rule.rs
macrostest/src/: lib.rs
rc-and-arc/: Cargo.toml
rc-and-arc/src/: dag1.rs  dag2.rs  main.rs  refcell.rs
scrape_url/: Cargo.toml
scrape_url/src/: main.rs  rust2.md
smart-point/: Cargo.toml
smart-point/src/: allocator.rs  cow1.rs  cow2.rs  guard.rs  mystring.rs
synquotederivemacros/: Cargo.toml
synquotederivemacros/examples/: command.rs  command_with_attr.rs
synquotederivemacros/src/: builder_with_attr.rs  lib.rs
