[package]
name = "async-and-await"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
anyhow = "1"
serde_yaml = "0.8"
toml = "0.5"
tokio = { version = "1", features = ["full"] }
tokio-util = {version = "0.6", features = ["codec"] }
futures = "0.3"
