[package]
name = "async-and-await"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
anyhow = "1.0.66"
serde_yaml = "0.9.14"
toml = "0.5"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
futures = "0.3"
blake3 = "1"
rayon = "1"
serde = { version = "1", features = ["derive"] }
async-std = { version = "1.12.0", features = ["unstable"] }
waker-fn = "1.1.1"
futures-lite = "2.3.0"
crossbeam = "0.8.4"
