[package]
name = "http-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1" # 错误处理
clap = { version = "3", features = ["derive"] } # 命令行解析
colored = "2" # 命令行颜色美化
jsonxf = "1.1" # json格式化
mime = "0.3" # 处理mime类型
# reqwest 默认使用 openssl，有些 linux 用户如果没有安装好 openssl 会无法编译，这里我改成了使用 rustls
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] } 
# HTTP 客户端
tokio = { version = "1", features = ["full"] } # 异步处理库
syntect = "4" # 语法高亮
