[package]
name = "scrape_url"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# toml文档 https://toml.io/cn/v1.0.0
[dependencies]
reqwest = { version = "0.11", features = ["blocking"] } # reqwest一个HTTP客户端，内联表语法
html2md = "0.2" # html2md包把html转成markdown
