[package]
name = "smart-point"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "allocator"
path = "src/allocator.rs"

[[bin]]
name = "cow1"
path = "src/cow1.rs"

[[bin]]
name = "cow2"
path = "src/cow2.rs"

[[bin]]
name = "guard"
path = "src/guard.rs"

[[bin]]
name = "mystring"
path = "src/mystring.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2"
serde = { version = "1",features = ["derive"] }
serde_json = "1"
lazy_static = "1"